# predictionmarket-arbitrage-alert

./: .env.example  .gitignore  README.md  config.json
rust_engine/: Cargo.toml  build_error.txt  build_error_utf8.txt  build_log.txt  test_api.rs
rust_engine/src/: config.rs  cross_matcher.rs  engine.rs  kalshi_fetcher.rs  main.rs  manifold_fetcher.rs  polymarket_fetcher.rs  telegram_notifier.rs
