[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
regex = "1.10"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
